--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-    "framer-motion": "https://esm.sh/framer-motion@^11.11.10"
+    "framer-motion": "https://esm.sh/framer-motion@^11.11.10",
+    "mongoose": "https://esm.sh/mongoose@^9.0.2"
   }
 }
 </script>
